# Darius-AI

./: .coverage  .env.example  .gitignore  Agent.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  ai_client.py  app.py  config.json  config_loader.py  debug_inspector_v6.py  edge_tts_engine.py  main.py  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt  stt_engine.py  supabase_client.py  test_commands_v6.py  tts_worker.py  voice_filter.py  windows_commands.py
.github/workflows/: main_darius-ai.yml
Darius-AI-development/: .gitignore  Agent.md  app.py  config.json  config_loader.py  debug_responses.py  main.py  requirements-windows.txt  requirements.txt  startup.sh  test_basic.py  test_commands.py  test_gemini.py  test_gemini_v6.py  test_voice.py  test_voice_v6.py  windows_commands.py
docs/: migration-pyside6.md
supabase/migrations/: 20260720_enable_rls.sql
tests/: conftest.py  debug_inspector_v6.py  test_commands_v6.py  test_config_loader.py  test_gemini_v6.py  test_supabase_client.py  test_voice_v6.py
